--- a/main.css
+++ b/main.css
@@ -7,7 +7,16 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
+  margin: 0; /* Remove default margin */
+  background-image: url('fotos/seunOfGod.png'); /* Replace with your image path */
+  background-size: cover; /* Make the background image cover the entire screen */
+  background-position: center; /* Center the background image */
+  background-repeat: no-repeat; /* Prevent the image from repeating */
+  backdrop-filter: blur(5px);
 }
+
+
+  
 
 .container {
   background-color: white;
