--- a/main.css
+++ b/main.css
@@ -65,7 +65,7 @@ textarea {
   padding: 10px;
   border: none;
   border-radius: 4px;
-  background-color: #4CAF50;
+  background-color: #e2002b;
   color: white;
   font-size: 16px;
   cursor: pointer;
@@ -73,7 +73,7 @@ textarea {
 }
 
 .btn:hover {
-  background-color: #45a049;
+  background-color: #aa0523;
 }
 
 table {
@@ -91,12 +91,8 @@ thead, td {
 }
 
 thead {
-    background-color: #4CAF50;
+    background-color: #e2002b;
     color: white;
-}
-
-tr:hover {
-    background-color: #f1f1f1;
 }
 
 h1 {
